--- a/MyInjector/MainWindow.xaml
+++ b/MyInjector/MainWindow.xaml
@@ -41,7 +41,12 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Button Grid.Row="1" Name="Button_ConfirmInjection" Content="Confirm" HorizontalAlignment="Right" Margin="2"/>
-            <Label Content="Not Implemented" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
+            <Grid Grid.Row="0" Margin="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <local:MethodNode Grid.Column="0" x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            </Grid>
         </Grid>
 
 
