--- a/MyInjector/MainWindow.xaml
+++ b/MyInjector/MainWindow.xaml
@@ -41,11 +41,13 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Button Grid.Row="1" Name="Button_ConfirmInjection" Content="Confirm" HorizontalAlignment="Right" Margin="2"/>
-            <Grid Grid.Row="0" Margin="2">
+            <Grid Grid.Row="0" Margin="2" Name="InjectionMethodArea">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <local:MethodNode Grid.Column="0" x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <local:MethodNode Grid.Column="1" x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150"/>
             </Grid>
         </Grid>
 
