ugly but better

--- a/MyInjector/MainWindow.xaml
+++ b/MyInjector/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MyInjector"
         mc:Ignorable="d"
-        Title="MyInjector" Height="200" Width="600">
-    <Grid Background="white">
+        Title="MyInjector" Height="auto" Width="600" SizeToContent="Height">
+    <Grid Background="white" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -18,8 +18,8 @@
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0" Grid.Column="0">
@@ -35,20 +35,15 @@
             <Button Name="Button_OpenDll" Content="Open" Grid.Row="1" Grid.Column="1" Margin="2" Click="Button_OpenDll_Click"/>
         </Grid>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Height="auto">
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Button Grid.Row="1" Name="Button_ConfirmInjection" Content="Confirm" HorizontalAlignment="Right" Margin="2"/>
-            <Grid Grid.Row="0" Margin="2" Name="InjectionMethodArea">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <local:MethodNode Grid.Column="1" x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150"/>
-            </Grid>
+            <StackPanel Grid.Row="0" Margin="2" Name="InjectionMethodArea">
+                <local:MethodNode x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+            </StackPanel>
         </Grid>
 
 
