--- a/MyInjector/MethodNode.xaml
+++ b/MyInjector/MethodNode.xaml
@@ -8,16 +8,14 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Border BorderBrush="Black" BorderThickness="0">
         <Grid Margin="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            <Label Content="Name" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Left" Name="TypeName"/>
-            <ComboBox HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.Row="2" Name="Methods" SelectionChanged="Methods_SelectionChanged"/>
-            <Label Content="Description" Grid.Row="4" VerticalAlignment="Center" HorizontalAlignment="Left" Name="Description"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Label Content="Name" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Name="TypeName"/>
+            <ComboBox HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.Column="1" Name="Methods" SelectionChanged="Methods_SelectionChanged"/>
+            <Label Content="Description" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left" Name="Description"/>
         </Grid>
     </Border>
 </UserControl>
