--- a/MyInjector/MainWindow.xaml
+++ b/MyInjector/MainWindow.xaml
@@ -39,11 +39,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="1" Name="Button_ConfirmInjection" Content="Confirm" HorizontalAlignment="Right" Margin="2"/>
-            <StackPanel Grid.Row="0" Margin="2" Name="InjectionMethodArea">
+            <Button Grid.Row="3" Name="Button_ConfirmInjection" Content="Confirm" HorizontalAlignment="Right" Margin="2"/>
+            <StackPanel Grid.Row="1" Margin="2" Name="InjectionMethodArea">
                 <local:MethodNode x:Name="Node_Major" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
             </StackPanel>
+            <Rectangle Height="1" Grid.Row="0" Fill="Gray" Margin="2, 0, 2, 0"/>
+            <Rectangle Height="1" Grid.Row="2" Fill="Gray" Margin="2, 0, 2, 0"/>
         </Grid>
 
 
