--- a/MyInjector/MainWindow.xaml
+++ b/MyInjector/MainWindow.xaml
@@ -27,7 +27,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <ComboBox Name="ComboBox_ProcessList" Grid.Column="0" Margin="2" DropDownOpened="ComboBox_ProcessList_DropDownOpened" ItemsSource="{Binding Path=ProcessList, Mode=OneWay}" VerticalContentAlignment="Center"/>
+                <ComboBox Name="ComboBox_ProcessList" Grid.Column="0" Margin="2" DropDownOpened="ComboBox_ProcessList_DropDownOpened" VerticalContentAlignment="Center"/>
                 <TextBox Name="TextBox_ProcessFilter" Grid.Column="1" MinWidth="60" MaxWidth="200" Margin="2" GotFocus="TextBox_ProcessFilter_GotFocus" LostFocus="TextBox_ProcessFilter_LostFocus" VerticalContentAlignment="Center"/>
             </Grid>
             <Label Name="Widget_ProcessFinder" Content="Finder"  Grid.Row="0" Grid.Column="1" Margin="2" MouseDown="Widget_ProcessFinder_MouseDown" MouseUp="Widget_ProcessFinder_MouseUp"/>
